# AspenHYSYS-MCP-Server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  TODO.md
scripts/: live_build_test.py  live_build_test_full.py  live_mcp_passthrough.py  live_probe.py
src/hysys_mcp/: __init__.py  hysys_client.py  registry.py  server.py
src/hysys_mcp/tools/: __init__.py  build.py  columns.py  connection.py  fluid.py  generic.py  logical.py  solver.py  streams.py  unit_ops.py
tests/: test_basic.py  test_registry.py
